--- a/index.Rmd
+++ b/index.Rmd
@@ -20,6 +20,18 @@ Column {data-width=650}
 
 ```{r}
 
+query<-"SELECT yearID,HR
+FROM Teams
+WHERE TeamID='NYA'"
+
+result<-sqldf(query)
+
+ggplot()+
+  geom_point(data=result,aes(x=yearID,y=HR))+
+  xlab('year')+
+  ylab('homeruns')
+
+
 ```
 
 Column {data-width=350}
@@ -28,7 +40,6 @@ Column {data-width=350}
 ### Number 2
 
 ```{r}
-
 query<-"SELECT salary,yearID 
 FROM Salaries
 GROUP BY salary
@@ -38,7 +49,6 @@ ORDER BY avg(salary)"
 result<-sqldf(query)
 
 -------
-  
 ggplot()+
   geom_point(data=result,aes(x=yearID,y=salary))+
   geom_line(data=result,aes(x=yearID,y=salary))+
